--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -60,25 +60,27 @@
 
   // event example hello world
   ctx.set_state(state(ctx));
-  ctx.get_state().expiry_ms = 777;
-  ctx.get_state().key_expiry =true;// false;
-  console.log('start')
+  ctx.get_state().set_expiry(777);
   ctx.get_state().start();
-  //console.log('clr_tmr!!!'); ctx.clear_tmr();
   
-  // turn on kb hook
-  function kb_call(kb_map, unicode_map){ //kb event handler..
-    egg_timer_call_back = egg_timer.call_back;
+  // turn on kb hook... kb event handler
+  function kb_call(kb_map, unicode_map){ 
     ctx.clear_tmr();
-    egg_timer_call_back().expire();
-    //egg_timer.call_back();
+    var now = ctx.get_state();
+    if(now.key_expiry){ 
+      now.expire();
+    }
     //console.log('hook into who needs the data', unicode_map); 
   }
 
   kb_map, unicode_map = keyboard_module(kb_call);
-  ctx.t0 = window.performance.now(); var t1,t2,i=0;
+  ctx.t0 = window.performance.now(); 
+  var t1,t2,i=0;
 
-  function resize(){ canvas.width = ctx.w(); canvas.height = ctx.h(); }
+  function resize(){ 
+    canvas.width = ctx.w(); 
+    canvas.height = ctx.h(); 
+  }
   function update() { 
     resize(); 
     var dt = Math.ceil((t1 - ctx.t0) / 1000.);
