--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -2,12 +2,11 @@
 <canvas></canvas>
 <script src="util.js"></script>
 <script src="state.js"></script>
-<script src="audio.js"></script>
-<script src="keyboard.js"></script>
 <script src="egg_timer.js"></script>
+<script src="key_board.js"></script>
 <script>
-  console.log('dont forget to set random seed.'); // want same results every time.
-  console.log('dont forget to filter keys.'); //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  //console.log('dont forget to set random seed.'); // want same results every time.
+  //console.log('dont forget to filter keys.'); //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 //does user enter a code? do they have to copy a result file?
 // random sample doesn't change on revisit.
  
