--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -7,11 +7,10 @@
 <script src="key_board.js"></script>
 <script src="experiment.js"></script>
 <script>
-  //console.log('dont forget to filter keys.'); //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-  //does user enter a code? do they have to copy a result file?
- 
-  // somewhere to put the history (print it out at the end? or send it with AJAX?)
-  // probably put up a python cgi hook to store the results. 
+  // filter keys
+  // does user enter a code, copy a result file, or send it with AJAZ?
+  // likely put up a python cgi hook to store results. 
+
   var history = []; 
 
   // graphics ctx
