--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -20,6 +20,8 @@
 
   // padded window dimensions
   ctx.pad = 20; 
+  // font size;
+  ctx.font_size = 30;
   var less = function(x){ 
     return x - ctx.pad; }
   ctx.w = function(){ 
