--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -1,10 +1,10 @@
 <html><body>
 <canvas></canvas>
+<script src="key.js"></script>
 <script src="util.js"></script>
 <script src="state.js"></script>
 <script src="wrap_text.js"></script>
 <script src="egg_timer.js"></script>
-<script src="key_board.js"></script>
 <script src="experiment.js"></script>
 <script>
   // filter keys
@@ -79,7 +79,8 @@
     imgs.push(load_img('images/' + i + '.jpg'));
   ctx.imgs = imgs;
   
-  var s1 = instructions( '1) welcome to the lab',ctx);
+  var s1 = instructions( 'Welcome to the recognition memory experiment framework.',ctx);
+  s1.txt2 = 'Have you seen this image before? If so, please press m. Otherwise, please press n.';
   var s2 = instructions( '2) this is a psych test',ctx); s1.set_successor(s2);
   var s3 = instructions( '3) it will be relatively painless',ctx); s2.set_successor(s3);
   var s4 = instructions( '4) thank you.',ctx); s3.set_successor(s4);
