--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -1,17 +1,14 @@
 <html><body>
 <canvas></canvas>
-
 <script src="key.js"></script>
 <script src="util.js"></script>
-<script src="state.js"></script>
-<script src="text.js"></script>
-<script src="egg_timer.js"></script>
 <script src="task.js"></script>
+<script src="pool.js"></script>
+<script src="text.js"></script>
+<script src="state.js"></script>
+<script src="egg_timer.js"></script>
 <script src="experiment.js"></script>
 <script>
-  // filter keys
-  // does user enter a code, copy a result file, or send it with AJAZ?
-  // likely put up a python cgi hook to store results. 
   var history = []; 
 
   // graphics ctx
@@ -110,14 +107,20 @@
 
   my_experiment(ctx);
 
-  // ASH: please set up test phase, data recording, and score! 
-
   ctx.set_state(ctx.first_new_state);
   ctx.get_state().start();
 //------------------------------------------------
 
   key_unicode = keyboard_module();
   ctx.t0 = window.performance.now(); 
+
+/*
+  // filter keys
+  // does user enter a code, copy a result file, or send it with AJAZ?
+  // likely put up a python cgi hook to store results. 
+  // set up test phase, data recording, and score..
+
+*/
 
 
 </script>
