--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -13,18 +13,27 @@
 
   // graphics ctx
   var canvas = document.getElementsByTagName("canvas")[0];
-  var ctx = canvas.getContext("2d"); document.bgColor = "#FFFFFF"; 
-
-  ctx.pad = 20; // aesthetic parameter
+  var ctx = canvas.getContext("2d"); 
+  
+  // aesthetic parameters  
+  document.bgColor = "#FFFFFF"; // background color
+  ctx.pad = 20; // shape parameter
   ctx.font_size = 30; // font size
   
+  // canvas dimensions manipulation
   var less = function(x){ return x - ctx.pad; }
   ctx.w = function(){ return less(window.innerWidth); }
   ctx.h = function(){ return less(window.innerHeight); }  
-  
-  // logo scaling algorithm
+  // canvas resize
+  function resize(){ 
+    canvas.width = ctx.w(); 
+    canvas.height = ctx.h(); 
+  };
+
+  // load corporate logo
   ctx.symbol = load_img("logo/uvic_gray.png");
 
+  // algorithm to draw scaled corporate logo
   ctx.draw_symbol = function(){
     var s_f = 5;
     var pad = this.pad;
@@ -38,7 +47,7 @@
     this.drawImage(s, w - lwf, h - lhf, lwf, lhf);
   };
 
-  // access current state.
+  // access current `state' (a state is an individual `trial')
   ctx.set_state = function(s){
     last_state = null;
     if(ctx.current_state != null)
@@ -50,6 +59,8 @@
     }
     return(s);
   };
+
+  // access current `state' (a state is an individual `trial')
   ctx.get_state = function(){
     var s = ctx.current_state;
     var st = '';
@@ -61,10 +72,12 @@
     return s 
   };
 
-  function resize(){ 
-    canvas.width = ctx.w(); 
-    canvas.height = ctx.h(); 
-  };
+  // trigger updating/plotting on window resize event..
+  window.onresize = function(event){ 
+    update(); 
+  }; 
+
+  // update the canvas (present the current `trial')
   function update(){ 
     resize(); 
     var now = ctx.get_state();
@@ -72,9 +85,6 @@
       now.show(ctx);
   };
   
-  window.onresize = function(event){ 
-    update(); 
-  }; 
   
   // seems to be the `in' hook..
   window.onload = function(){
@@ -82,6 +92,7 @@
     update();
   };
 
+  // set up the timer to coordinate transition between trials
   ctx.egg_timer = egg_timer;
   ctx.clear_tmr = function(){
     ctx.egg_timer.cancel(); 
@@ -89,12 +100,14 @@
   ctx.init_tmr = function(t_ms, callback){ 
     ctx.egg_timer.setup(t_ms, callback);
   };
-    
+      
+  // initialize reference to first and most-recently-initialized trials..
   ctx.last_new_state = null;
   ctx.first_new_state = null;
 
-  var n_imgs = 10; //200;
 
+  // load some image files (n.b., to use more images, increase n_imgs)
+  var n_imgs = 10; //200;
   ctx.load_imgs = function (n_imgs){
     var imgs = new Array(); 
     // should only load the used ones..
@@ -102,15 +115,18 @@
       imgs.push(load_img('images/' + i + '.jpg'));
     ctx.imgs = imgs;
   };
-  
   ctx.load_imgs(10);
 
+  // set up an experiment according to user specfications/code
   my_experiment(ctx);
-
+  
+  console.log('start');
+  // start at the very beginning, it's a very good place to start..
   ctx.set_state(ctx.first_new_state);
   ctx.get_state().start();
 //------------------------------------------------
 
+  // process keyboard events. 
   key_unicode = keyboard_module();
   ctx.t0 = window.performance.now(); 
 
