added score display at end
added score display at end

--- a/m3m0ry.html
+++ b/m3m0ry.html
@@ -124,6 +124,7 @@
   // set up an experiment according to user specfications/code
   my_experiment(ctx);
   
+  ctx.last_state = ctx.last_new_state;
   console.log('start');
   // start at the very beginning, it's a very good place to start..
   ctx.set_state(ctx.first_new_state);
