--- a/examples/test_phase/m3m0ry.html
+++ b/examples/test_phase/m3m0ry.html
@@ -1,6 +1,9 @@
 <html>
 <body>
+<script> //<script src="my_experiment.js">
+var experiment_code = 'my_experiment';
+</script>
+
 <script src="../../m3m0ry.js"></script>
-<script src="my_experiment.js"></script>
 </body>
 </html>
