--- a/examples/test_phase/m3m0ry.html
+++ b/examples/test_phase/m3m0ry.html
@@ -1,9 +1,8 @@
 <html>
 <body>
-<script> //<script src="my_experiment.js">
+<script>
 var experiment_code = 'my_experiment';
 </script>
-
 <script src="../../m3m0ry.js"></script>
 </body>
 </html>
