--- a/examples/delay/memory.html
+++ b/examples/delay/memory.html
@@ -3,7 +3,7 @@
 <script>
 var experiment_code = 'my_experiment';
 </script>
-<script src="../../m3m0ry.js"></script>
+<script src="../../memory.js"></script>
 </body>
 </html>
 
