--- a/examples/test_phase/memory.html
+++ b/examples/test_phase/memory.html
@@ -3,6 +3,6 @@
 <script>
 var experiment_code = 'my_experiment';
 </script>
-<script src="../../m3m0ry.js"></script>
+<script src="../../memory.js"></script>
 </body>
 </html>
