--- a/xml_send.html
+++ b/xml_send.html
@@ -1,28 +1,14 @@
 <script>
-function loadXMLDoc(){
-  var xmlhttp;
-  if(window.XMLHttpRequest){// code for IE7+, Firefox, Chrome, Opera, Safari
-    xmlhttp=new XMLHttpRequest();
-  }
-  else{// code for IE6, IE5
-    xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
-  }
-  xmlhttp.onreadystatechange = function(){
-    if (xmlhttp.readyState==4 && xmlhttp.status==200){
-      var str = xmlhttp.responseText;
-      alert(str);
-    }
-  }
-  var fileNameVar = "hello"; //LOOK AT ME*******
-  xmlhttp.open(
-    'GET', 
-    'cgi-bin/try.pl?name=' + encodeURIComponent(fileNameVar),
-    false
-  );
-  xmlhttp.send();
-}
 
-// run it
-loadXMLDoc();
+  var s = "this is my test data"; 
+  s += "\n more test data";
+  s += "\n another line";
+  /* xml http request object */
+  var xhr = (window.XMLHttpRequest) ? new XMLHttpRequest() : new activeXObject("Microsoft.XMLHTTP");
+  var data = new FormData();
+  data.append("data", s);
+  xhr.open( 'post', 'http://ashy.ca/memory/test.py', true);
+  xhr.send(data);
+
 </script>
 
