--- a/xml_send.html
+++ b/xml_send.html
@@ -1,8 +1,10 @@
 <script>
 
+  // data to send for this example
   var s = "this is my test data"; 
-  s += "\n more test data";
-  s += "\n another line";
+  s += "\n\tmore test data";
+  s += "\n\tanother line";
+
   /* xml http request object */
   var xhr = (window.XMLHttpRequest) ? new XMLHttpRequest() : new activeXObject("Microsoft.XMLHTTP");
   var data = new FormData();
