// now that we've got the ajax send example, we can proceed to bundle the data within the program.
  // now that we've got the ajax send example, we can proceed to bundle
the data within the program.

--- a/xml_send.html
+++ b/xml_send.html
@@ -12,5 +12,6 @@
   xhr.open( 'post', 'http://ashy.ca/memory/test.py', true);
   xhr.send(data);
 
+  // now that we've got the ajax send example, we can proceed to bundle the data within the program.
 </script>
 
