--- a/xml_send.html
+++ b/xml_send.html
@@ -1,17 +1,13 @@
 <script>
-
   // data to send for this example
-  var s = "this is my test data"; 
-  s += "\n\tmore test data";
-  s += "\n\tanother line";
+  var s = "this is my test data\n\tmore test data\n\tanother line"
 
   /* xml http request object */
-  var xhr = (window.XMLHttpRequest) ? new XMLHttpRequest() : new activeXObject("Microsoft.XMLHTTP");
-  var data = new FormData();
-  data.append("data", s);
-  xhr.open( 'post', 'http://ashy.ca/memory/test.py', true);
-  xhr.send(data);
+  var xhr = (window.XMLHttpRequest) ? new XMLHttpRequest() : new activeXObject("Microsoft.XMLHTTP")
+  var data = new FormData()
+  data.append("data", s)
+  xhr.open( 'post', 'http://ashy.ca/memory/test.py', true)
+  xhr.send(data)
 
   // now that we've got the ajax send example, we can proceed to bundle the data within the program.
 </script>
-
