--- a/xml_send.html
+++ b/xml_send.html
@@ -6,7 +6,7 @@
   var xhr = (window.XMLHttpRequest) ? new XMLHttpRequest() : new activeXObject("Microsoft.XMLHTTP")
   var data = new FormData()
   data.append("data", s)
-  xhr.open( 'post', 'http://ashy.ca/memory/test.py', true)
+  xhr.open( 'post', 'http://ashy.ca/memory/xml_receive.py', true)
   xhr.send(data)
 
   // now that we've got the ajax send example, we can proceed to bundle the data within the program.
